--- a/WPFClient/ResourceDictionaries/Dictionary1.xaml
+++ b/WPFClient/ResourceDictionaries/Dictionary1.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
                     xmlns:Ext="clr-namespace:Ext">
     <Style x:Key="ImageButton" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent"/>
@@ -43,9 +44,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="bord">
-                        <TextBlock Text="{TemplateBinding Content}" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="1"/>
-                    </Border>
+                    <Microsoft_Windows_Themes:ButtonChrome x:Name="Chrome" Height="{TemplateBinding Height}" Width="{TemplateBinding Width}" BorderBrush="Transparent" Background="Transparent" Margin="{TemplateBinding Margin}">
+                        <Border x:Name="bord">
+                            <TextBlock Text="{TemplateBinding Content}" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="1"/>
+                        </Border>
+                    </Microsoft_Windows_Themes:ButtonChrome>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="FontWeight" Value="Bold"/>
