--- a/WPFClient/Views/UserControlGeneralInfo.xaml
+++ b/WPFClient/Views/UserControlGeneralInfo.xaml
@@ -28,6 +28,14 @@
 
             </StackPanel>
         </Border>
+        <Border DockPanel.Dock="Top">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding CashierShiftStatus}"/>
+                <Button Command="{Binding OpenCashierShiftCmd}">Відкрити касову зміну</Button>
+                <Button Command="{Binding CloseCashierShiftCmd}">Закрити касову зміну</Button>
+
+            </StackPanel>
+        </Border>
         <UniformGrid DockPanel.Dock="Bottom" Rows="1">
             <Button                
                  Content="Login"
