--- a/WPFClient/Views/UserControlLogin.xaml
+++ b/WPFClient/Views/UserControlLogin.xaml
@@ -9,17 +9,13 @@
              xmlns:Ext="clr-namespace:Ext"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <DockPanel>
-        <DockPanel.Background>
-            <ImageBrush ImageSource="/ResourceDictionaries/Image/Font.png" Stretch="UniformToFill"/>
-        </DockPanel.Background>
-        <!--Деревяний фон-->
+    <DockPanel Background="White">
+      
         <Button                
             DockPanel.Dock="Bottom"
             Content="GeneralInfo"
             Command="{Binding GoToGeneralInfo}"
             Width="90" Margin="5"/>
-
         <ListBox 
             SelectionMode="Multiple"
             VerticalAlignment="Center"
